<!--包含用到的文本（按钮、标签）-->
<resources>
    <string name="app_name">DriverCoordination for Customer</string>
    <string name="title_activity_driver_home">DriverHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_change_password">Change PassWord</string>
    <string name="menu_nav_delete_account">Delete Account</string>
    <string name="title_activity_customer_home2">CustomerHome2Activity</string>
    <string name="title_activity_customer_home">CustomerHomeActivity</string>
    <string name="welcome">Welcome</string>
    <string name="personal_transport">personal transport</string>
    <string name="package_delivery">package delivery</string>
    <string name="drop_off_point">drop-off point</string>
    <string name="pick_up_point">pick-up point</string>
    <string name="start_your_trip_now">Start your trip now!</string>
    <string name="sign_up_to_book_a_trip">Sign Up to book a trip!</string>
    <string name="now_you_are_customer">Now you are customer</string>
    <string name="projectGroupName">IoT Final Project\n Ruoxi He, Yuhan Li, Yijia Liu</string>
    <string name="the_pick_up_point_default">The Pick-Up Point: University College Dublin</string>
    <string name="the_drop_off_point_default">The Drop-Off Point: The Dublin Airport</string>
    <string name="phone">3530872260272</string>
</resources>