<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/baseline_password_24"
            android:title="@string/menu_change_password" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_sign_out" />

        <item
            android:id="@+id/nav_delete_account"
            android:icon="@drawable/baseline_delete_forever_24"
            android:title="@string/menu_nav_delete_account" />

    </group>
</menu>